# pathmatch

./: .gitignore  .hgignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  README.txt  bugs.txt  makefile  notes.md  notes.txt  pathmatch.cpp  pathmatch.sln  pathmatch.vcxproj  pathmatcher.cpp  pathmatcher.h  test.cmd  wildcomp.cpp  wildcomp.h
ext/: .gitignore
ext/FileSystemProxy/: FileSystemProxy-x64-dbg.lib  FileSystemProxy-x64.lib  fileSystemProxy.h
src/: fileSystemProxy.cpp  fileSystemProxy.h  fileSystemProxyWindows.cpp  fileSystemProxyWindows.h  pathmatch.cpp  pathmatch.sln  pathmatch.vcxproj  pathmatch.vcxproj.filters  pathmatcher.cpp
src/FileSystemProxy/: fileSystemProxy.h  fileSystemProxyMock.cpp  fileSystemProxyMock.h  fileSystemProxyWindows.cpp  fileSystemProxyWindows.h
src/PathMatchLib/: PathMatchLib.vcxproj  PathMatchLib.vcxproj.filters  pathmatcher.cpp  pathmatcher.h
src/PathMatcher/: pathmatcher.cpp  pathmatcher.h  pathmatcherTest.cpp
src/WildComp/: wildcomp.cpp  wildcomp.h
src/pathmatcher/: pathmatcher.cpp  pathmatcher.h
test/: run-tests.cmd  run.cmd  test-bug-01.gold  test-debug-01.gold  test-help-00.gold  test-help-01.gold  test-help-02.gold  test-help-03.gold  test-help-04.gold  test-match-01.gold  test-version-00.gold  test-version-01.gold  test-version-02.gold
test/test-tree/test-dir-01/: dummy-file.txt
